typescript/checker/tests/conformance/async/es5/asyncUseStrict_es5.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es5/asyncUseStrict_es5.ts
 --> $DIR/tests/conformance/async/es5/asyncUseStrict_es5.ts:6:1
  |
6 | / async function func(): Promise<void> {
7 | |     "use strict";
8 | |     var b = await p || a;
9 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            151,
        ),
        hi: BytePos(
            166,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es5/asyncUseStrict_es5.ts:6:22
  |
6 | async function func(): Promise<void> {
  |                      ^^^^^^^^^^^^^^^

